src/objects/Campaign_Program__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Offer__c</fullName>
        <formula>Campaign__r.Offer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the promotional offer for the campaign</inlineHelpText>
        <label>Campaign Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Programs</relationshipLabel>
        <relationshipName>Campaign_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates default campaign for this program.</description>
        <label>BOCA Default Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <inlineHelpText>When changed, this Campaign Program will only display for the selected Language Code.</inlineHelpText>
        <label>Language Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_us</fullName>
                    <default>true</default>
                    <label>en_us</label>
                </value>
                <value>
                    <fullName>en_ca</fullName>
                </value>
                <value>
                    <fullName>fr_ca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Pricing__c</fullName>
        <formula>Program__r.Program_Pricing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the standard pricing for this program.  For any promotional pricing please see the offer on the campaign.</inlineHelpText>
        <label>Program Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaign Programs</relationshipLabel>
        <relationshipName>Campaign_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Siebel_L1_Account_Number__c</fullName>
        <formula>Program__r.Siebel_L1_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel L1 Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Program_Row_Id__c</fullName>
        <formula>Program__r.Siebel_Program_Row_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Program Row Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Footer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions - Footer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Header__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions - Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WEX_Platform__c</fullName>
        <formula>TEXT(Program__r.WEX_Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Platform</label>
        <type>Text</type>
    </fields>
    <label>Campaign Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>